# JOBOFFERSCRAPER

./: .env  Makefile  jobs.db  pyproject.toml
apps/streamlit_app/: Home.py
db/: schemas.py
scraper/: settings.py
scraper/adapters/: ashby.py  bamboohr.py  base.py  greenhouse.py  lever.py  personio.py  recruitee.py  smartrecruiters.py  teamtailor.py  workable.py  workday.py
scraper/client/: http.py
scraper/models/: job.py
scraper/pipeline/: normalize.py  orchestrator.py  storage.py
scripts/: run_scrape_once.py
